--- a/carbonia/ia/Templates/index.html
+++ b/carbonia/ia/Templates/index.html
@@ -4,67 +4,63 @@
 
 {% block content %}
   <h1>Subir respaldo</h1>
-  
-  <!-- Contenedor de los alcances -->
-
   <div class="charts">
-    
-
     <div class="chart">
       <h1>Selector de Alcances de Huella de Carbono</h1>
-    <select id="alcanceSelector" onchange="handleSelectChange()">
+      <select id="alcanceSelector" onchange="handleSelectChange()">
         <option value="">-- Selecciona un Alcance --</option>
         <option value="1">Alcance 1</option>
         <option value="2">Alcance 2</option>
         <option value="3">Alcance 3</option>
-    </select>
-    
-    <p id="description">Selecciona un alcance para ver su descripción.</p>
-    <div id="buttonContainer"></div>
-
-
-
-    <div class="file-upload" id="fileUploadContainer">
-      <form method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <input type="file" name="pdf_file" required> <br>
-      <button class="file-upload-btn" type="submit">Subir y Procesar</button>
-      </form>
-    </div>
-
-    
-    </div>
-
-    <script>
-      var cargaAlcance3Url = "{% url 'carga_item_alcance3' %}";
+      </select>
       
-      function handleSelectChange() {
-          var alcance = document.getElementById('alcanceSelector').value;
-          var description = document.getElementById('description');
-          var buttonContainer = document.getElementById('buttonContainer');
-          var fileUploadContainer = document.getElementById('fileUploadContainer');
-          
-          switch(alcance) {
-              case '1':
-              case '2':
-                  description.innerText = alcance === '1' ? 
-                                          'Alcance 1: Emisiones directas de GEI procedentes de fuentes que son propiedad de la empresa o que están bajo su control.' : 
-                                          'Alcance 2: Emisiones indirectas de GEI procedentes del consumo de energía eléctrica adquirida y consumida por la empresa.';
-                  buttonContainer.style.display = 'none'; // Ocultar el botón
-                  fileUploadContainer.style.display = 'block'; // Mostrar el formulario
-                  break;
-              case '3':
-                  description.innerText = 'Alcance 3: Otras emisiones indirectas, como las resultantes de las actividades de la empresa pero que ocurren en fuentes que no son propiedad de la empresa ni están bajo su control.';
-                  buttonContainer.style.display = 'block'; // Mostrar el botón
-                  buttonContainer.innerHTML = '<button class="button-upload" onclick="location.href=\'' + cargaAlcance3Url + '\'">Cargar documentos</button>';
-                  fileUploadContainer.style.display = 'none'; // Ocultar el formulario
-                  break;
-              default:
-                  description.innerText = 'Por favor selecciona un alcance para ver la información relacionada.';
-                  buttonContainer.style.display = 'none'; // Ocultar el botón
-                  fileUploadContainer.style.display = 'none'; // Ocultar el formulario
-          }
-      }
-    </script>
+      <p id="description">Selecciona un alcance para ver su descripción.</p>
+      <div id="buttonContainer"></div>
 
+      <div class="file-upload" id="fileUploadContainer" style="display: none;">
+        <form method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <input type="hidden" id="alcanceInput" name="alcance" value="">
+          <input type="file" name="pdf_file" required> <br>
+          <button class="file-upload-btn" type="submit">Subir y Procesar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    var cargaAlcance3Url = "{% url 'carga_item_alcance3' %}";
+
+    function handleSelectChange() {
+      var alcance = document.getElementById('alcanceSelector').value;
+      var description = document.getElementById('description');
+      var buttonContainer = document.getElementById('buttonContainer');
+      var fileUploadContainer = document.getElementById('fileUploadContainer');
+      var alcanceInput = document.getElementById('alcanceInput');
+      
+      switch(alcance) {
+        case '1':
+        case '2':
+          description.innerText = alcance === '1' ? 
+            'Alcance 1: Emisiones directas de GEI procedentes de fuentes que son propiedad de la empresa o que están bajo su control.' : 
+            'Alcance 2: Emisiones indirectas de GEI procedentes del consumo de energía eléctrica adquirida y consumida por la empresa.';
+          buttonContainer.style.display = 'none';
+          fileUploadContainer.style.display = 'block';
+          alcanceInput.value = alcance;
+          break;
+        case '3':
+          description.innerText = 'Alcance 3: Otras emisiones indirectas, como las resultantes de las actividades de la empresa pero que ocurren en fuentes que no son propiedad de la empresa ni están bajo su control.';
+          buttonContainer.style.display = 'block';
+          buttonContainer.innerHTML = '<button class="button-upload" onclick="location.href=\'' + cargaAlcance3Url + '\'">Cargar documentos</button>';
+          fileUploadContainer.style.display = 'none';
+          alcanceInput.value = '';
+          break;
+        default:
+          description.innerText = 'Por favor selecciona un alcance para ver la información relacionada.';
+          buttonContainer.style.display = 'none';
+          fileUploadContainer.style.display = 'none';
+          alcanceInput.value = '';
+      }
+    }
+  </script>
 {% endblock %}
