--- a/carbonia/ia/Templates/registro.html
+++ b/carbonia/ia/Templates/registro.html
@@ -34,6 +34,7 @@
                 <input type="email" id="emailcliente" name="emailcliente" required aria-describedby="emailError">
                 <small id="emailError" class="error-text"></small>
             </div>
+            <!-- ESCONDER CONTRASEÑA
             <div class="input-group password-group">
                 <label for="psscliente">Contraseña</label>
                 <input type="password" id="psscliente" name="psscliente" required aria-describedby="passwordError">
@@ -54,12 +55,12 @@
                       onmouseleave="togglePassword('psscliente2', false)">
                     &#128065;
                 </span>
-            </div>
+            </div> -->
             <div class="checkbox-group">
                 <input type="checkbox" id="terms" name="terms" required>
                 <label for="terms">Acepto términos & condiciones</label>
             </div>
-            <button type="submit" class="submit-btn">REGISTER</button>
+            <button type="submit" class="submit-btn">Enviar</button>
         </form>
         <div class="link">
             ¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión aquí</a>
@@ -141,4 +142,4 @@
     }
 </script>
 
-{% endblock %}
+{% endblock %}
