--- a/carbonia/ia/Templates/registro-admin.html
+++ b/carbonia/ia/Templates/registro-admin.html
@@ -1,7 +1,7 @@
 
 {% extends 'partials/base-admin.html' %}
 {% load static %}
-{% block title %}Registro - Carbonia{% endblock %}
+{% block title %}Registro Admin - Carbonia{% endblock %}
 
 {% block content %}
 <h1>Registro de Empresas</h1>
